sass/components/content/_multi-note.scss
.multi-note-thumbnail {
  max-width: 60px;
  max-height: 60px;
  width: 60px;
  height: 60px;
  cursor: pointer;
}

.multi-note-image {
  img {
    max-width: 100%;
    max-height: 300px;
  }
}

.multi-note-choices {
  margin-top: 10px;
  list-style-type: none;
  li {
    display: inline;
    .thumbnail {
      display: inherit;
      margin-right: 20px;
    }
  }
}

